syntax = "proto3";

package notifications;

option java_package = "com.dojo.apimock";
option java_multiple_files = true;

message LeaderboardRequest{
  string contestId = 1;
}

message LeaderboardResponse{
  string contestId = 1;
  repeated Participant participant = 2;
}

message Participant{
  UserInfo user = 1;
  int64 score = 2;
}

message UserInfo{
  string id = 1;
  string name = 2;
}

message StopRequest{
  string contestId = 1;
}

message StopResponse{

}

message StartRequest{
  string contestId = 1;
}

message StartResponse{

}

service ApiMockService{
  rpc getLeaderboard(LeaderboardRequest) returns (stream LeaderboardResponse);
  rpc stopNotifications(StopRequest) returns (StopResponse);
  rpc startNotifications(StartRequest) returns (StartResponse);
}
